--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "winston": "^3.18.3",
+    "xss-filters": "^1.2.7",
     "zod": "^4.1.12"
   },
   "devDependencies": {
