Add xss-filter package

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/express": "^5.0.3",
     "@types/hpp": "^0.2.6",
     "@types/node": "^24.7.0",
+    "@types/xss-filters": "^1.2.0",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
